@@ -1,168 +1,194 @@
 # Java 25 concurrency benchmark
 
-This project benchmarks various Java 25 concurrency models for HTTP APIs. It evaluates **throughput**, **latency**, and **resource efficiency** (CPU/RAM) across three distinct paradigms:
+This project benchmarks various Java 25 concurrency models for HTTP APIs. It 
+evaluates **throughput**, **latency**, and **resource efficiency** (CPU/RAM) 
+across three distinct paradigms:
 
-* **Thread Pool:** Traditional I/O using a fixed-size executor.
-* **Virtual Threads:** Lightweight, user-mode threads (Project Loom).
-* **Reactive:** Non-blocking streams using Project Reactor.
+* **Thread pool:** Traditional I/O using a fixed-size executor.
+* **Virtual threads:** Lightweight, JVM-managed threads (Project Loom).
+* **Reactive streams:** Non-blocking streams using Project Reactor.
 
-## Project structure
+## Benchmark deployment topology
 
-This is a multi-module Maven project:
+```
++--------------------------------------------------------------+
+|  HOST SERVER (4 vCPU, 16GB RAM)                              |
+|  (Tuned with tune-host.sh)                                   |
+|                                                              |
+|  +--------------------------------------------------------+  |
+|  |  DOCKER CONTAINER (--memory=12g)                       |  |
+|  |                                                        |  |
+|  |  +--------------------------------------------------+  |  |
+|  |  |  UBUNTU 24.04 LTS (Guest OS)                     |  |  |
+|  |  |                                                  |  |  |
+|  |  |  +--------------------------------------------+  |  |  |
+|  |  |  |  SPRING BOOT APP (Java 25, ZGC)            |  |  |  |
+|  |  |  |  (Heap: -Xms8G -Xmx8G)                     |  |  |  |
+|  |  |  |                                            |  |  |  |
+|  |  |  |  - Thread Pool Module /                    |  |  |  |
+|  |  |  |  - Virtual Thread Module /                 |  |  |  |
+|  |  |  |  - Reactive Module                         |  |  |  |
+|  |  |  +--------------------------------------------+  |  |  |
+|  |  +--------------------------------------------------+  |  |
+|  +--------------------------------------------------------+  |
++--------------------------------------------------------------+
+           ^
+           |
+           |  NETWORK (1 Gbps Virtual Link)
+           |  (Low Latency / High PPS)
+           |
+           v
++--------------------------------------------------------------+
+|  GENERATOR SERVER (8 vCPU, 16GB RAM)                         |
+|  (Tuned with tune-generator.sh)                              |
+|                                                              |
+|  +--------------------------------------------------------+  |
+|  |  wrk LOAD TESTING TOOL                                 |  |
+|  |  (-t8 -c10000 -d600s)                                  |  |
+|  +--------------------------------------------------------+  |
++--------------------------------------------------------------+
+```
 
-* `thread-pool`: Benchmark implementation using a fixed thread pool.
-* `virtual-thread`: Benchmark implementation using Java virtual threads.
-* `reactive`: Benchmark implementation using reactive streams.
-
-## Run the load test
+## Pressure tests
 
 Process:
 
 1. Build Docker images
 2. Run Docker images
-3. Print JVM CPU and memory usage
-4. Execute load test
+3. Execute pressure tests
 
-### Build the Docker images
+### 1. Build Docker images
 
-The server I used is shown below. You can use different servers, as long as
-you have Docker installed. You may need to adjust memory size and number of 
-threads to match the size of the available memory on you computer.
+The server configuration I used is shown below. You can use a different setup 
+as long as Docker is installed.
 
-* AWS Instance Type: t3.medium or m5.large
-* vCPUs: 2
-* Memory: 8GB
-* Network: Up to 5 Gbps
-* OS: Ubuntu 24.04 LTS tuned with the `tune-host.sh`, which is in the same directory as this file.
+* vCPUs: 4
+* Memory: 16GB
+* Network: 1 Gbps
+* OS: Ubuntu 24.04 LTS tuned with the `tune-host.sh` (in the same directory as this file).
 
-To build the Docker images,
+Build Docker images:
 
 ```shell
-# In the root dir, where this file is located 
 docker build --build-arg APP=thread-pool -t concbench-j25-thread-pool .
 docker build --build-arg APP=virtual-thread -t concbench-j25-virtual-thread .
 docker build --build-arg APP=reactive -t concbench-j25-reactive .
 ```
 
-You may want to see what is inside the Docker images.
+If you want to see what is inside the images,
 
 ```shell
-# Enter a Docker image
+# Enter a Docker image, e.g.
 docker run --rm -it --entrypoint /bin/bash concbench-j25-thread-pool
-```
 
-### Run the Docker images
-
-To run the Docker images built from the previous step 
-(we only run one of them at a time),
-
-```shell
-# thread-pool
-docker run --rm -d \
-  --name concbench-j25-thread-pool \
-  --ulimit nofile=200000:200000 \
-  --memory=6g \
-  -e JAVA_OPTS="-XX:+UseZGC \
-    -Xmx4G \
-    -Xms4G \
-    -XX:NativeMemoryTracking=summary \
-    -Djdk.tracePinnedThreads=full \
-    -Dserver.tomcat.threads.max=2000" \
-  -v `pwd`/logs:/logs \
-  -p 8080:8080 \
-  concbench-j25-thread-pool
-
-# virtual-thread
-docker run --rm -d \
-  --name concbench-j25-virtual-thread \
-  --ulimit nofile=200000:200000 \
-  --memory=6g \
-  -e JAVA_OPTS="-XX:+UseZGC \
-    -Xmx4G \
-    -Xms4G \
-    -XX:NativeMemoryTracking=summary \
-    -Djdk.tracePinnedThreads=full \
-    -Dspring.threads.virtual.enabled=true \
-    -Dserver.tomcat.threads.max=200000" \
-  -v `pwd`/logs:/logs \
-  -p 8080:8080 \
-  concbench-j25-virtual-thread
-  
-# reactive
-docker run --rm -d \
-  --name concbench-j25-reactive \
-  --ulimit nofile=200000:200000 \
-  --memory=6g \
-  -e JAVA_OPTS="-XX:+UseZGC \
-    -Xmx4G \
-    -Xms4G \
-    -XX:NativeMemoryTracking=summary \
-    -Dserver.netty.connection-timeout=2s" \
-  -v `pwd`/logs:/logs \
-  -p 8080:8080 \
-  concbench-j25-reactive
-```
-
-* `-XX:+UseZGC`: Avoid GC noise
-* `-Djdk.tracePinnedThreads`: Capture pinning data for RQ3
-* `-XX:NativeMemoryTracking=summary`: Enable tracking thread stack usage via 
-the `jcmd`. This will cause 5-10% performance overhead.
-
-You may want to check configuration
-
-```shell
-# Check the host limit
-ulimit -n
-
-# Check the specific Java process limit inside the container
-docker exec concbench-j25-thread-pool cat /proc/self/limits | grep "Max open files"
-docker exec concbench-j25-virtual-thread cat /proc/self/limits | grep "Max open files"
-docker exec concbench-j25-reactive cat /proc/self/limits | grep "Max open files"
-
-# JVM command-line arguments
-docker exec concbench-j25-thread-pool sh -c 'jcmd $(pgrep java) VM.command_line'
-docker exec concbench-j25-virtual-thread sh -c 'jcmd $(pgrep java) VM.command_line'
-docker exec concbench-j25-reactive sh -c 'jcmd $(pgrep java) VM.command_line'
-
-# Enter a running Docker container
+# Enter a running Docker container, e.g.
 docker exec -it concbench-j25-thread-pool /bin/bash
 ```
 
-To stop,
+### 2. Run Docker images
+
+Run one of the three images using the `docker run` commands provided below, 
+then go down to "Check logs" or "Execute pressure tests". You may need to 
+adjust the **memory size** based on the available resources on your computer.
 
 ```shell
+# Start thread-pool
+docker run --rm -d \
+  --name concbench-j25-thread-pool \
+  --ulimit nofile=200000:200000 \
+  --memory=12g \
+  -e JAVA_OPTS="-XX:+UseZGC \
+    -Xmx8G -Xms8G \
+    -XX:NativeMemoryTracking=summary \
+    -Dserver.tomcat.threads.max=2000" \
+  -v `pwd`/logs:/app/logs \
+  -p 8080:8080 \
+  concbench-j25-thread-pool
+# Stop
 docker container kill concbench-j25-thread-pool
+
+
+# Start virtual-thread
+docker run --rm -d \
+  --name concbench-j25-virtual-thread \
+  --ulimit nofile=200000:200000 \
+  --memory=12g \
+  -e JAVA_OPTS="-XX:+UseZGC \
+    -Xmx8G -Xms8G \
+    -XX:NativeMemoryTracking=summary" \
+  -v `pwd`/logs:/app/logs \
+  -p 8080:8080 \
+  concbench-j25-virtual-thread
+# Stop
 docker container kill concbench-j25-virtual-thread
+
+
+# Start reactive
+docker run --rm -d \
+  --name concbench-j25-reactive \
+  --ulimit nofile=200000:200000 \
+  --memory=12g \
+  -e JAVA_OPTS="-XX:+UseZGC \
+    -Xmx8G -Xms8G \
+    -XX:NativeMemoryTracking=summary" \
+  -v `pwd`/logs:/app/logs \
+  -p 8080:8080 \
+  concbench-j25-reactive
+# Stop
 docker container kill concbench-j25-reactive
 ```
 
-### Print JVM CPU and memory usage
+Check logs
 
 ```shell
-# Appends CPU and memory usage to a log file every second
-# The -it flag allows your terminal to send the interrupt signal (SIGINT) 
-# to the shell running inside the container, so that it stops when you press 
-docker exec -it concbench-j25-thread-pool sh /app/usage.sh
-docker exec -it concbench-j25-virtual-thread sh /app/usage.sh
-docker exec -it concbench-j25-reactive sh /app/usage.sh
+# Check JVM command-line arguments
+cat logs/out.log
+
+# CPU and memory usage
+tail -f logs/*.csv
+
+# Check the host limit
+ulimit -n
 ```
 
-### Execute load test
+### 3. Execute pressure tests
 
-Use a load testing tool such as [wrk](https://github.com/wg/wrk).
+The server configuration I used is shown below. You can use a different setup.
+
+Generator server:
+
+* vCPUs: 8
+* Memory: 16GB
+* Network: 1Gbps
+* OS: Ubuntu 24.04 LTS tuned with the `tune-generator.sh` (in the same directory as this file).
+
+The following commands use [wrk](https://github.com/wg/wrk) to perform HTTP 
+load tests. You may need to adjust **threads** and **connections** based on the 
+available resources on your computer. You can also use other load testing tools.
 
 ```shell
-# 12 threads, 400 total HTTP connections, duration of 10s
-wrk -t12 -c400 -d10s --latency http://localhost:8080/benchmark/delay/1000
+# Warm-up: 4 threads, 200 connections, 2 minutes
+wrk -t4 -c200 -d120s --latency --timeout 5s http://localhost:8080/benchmark/delay/1000
+
+# Pressure: 8 threads, 10k connections, 10 minutes
+wrk -t8 -c10000 -d600s --latency --timeout 15s http://localhost:8080/benchmark/delay/1000
+# Server delay: 2s
+wrk -t8 -c10000 -d600s --latency --timeout 15s http://localhost:8080/benchmark/delay/2000
+# Server delay: 5s
+wrk -t8 -c10000 -d600s --latency --timeout 15s http://localhost:8080/benchmark/delay/5000
+# Server delay: 10s
+wrk -t8 -c10000 -d600s --latency --timeout 15s http://localhost:8080/benchmark/delay/10000
 ```
 
-## Development
+## Local execution
+
+You can build and run the three modules (implementations) locally using Maven 
+commands or whatever Java IDE you like.
 
 ### Prerequisites
 
-* **Java 25+**
-* **Maven 3.9+**
-* **Docker**
+* Java 25+
+* Maven 3.9+
 
 ### Build
 
@@ -173,15 +199,10 @@ mvn clean package
 
 ### Run
 
-To run (one of them at a time) using Maven:
+Run (one of them at a time):
 
 ```shell
 mvn spring-boot:run -am -pl reactive
-
 mvn spring-boot:run -am -pl thread-pool
-
 mvn spring-boot:run -am -pl virtual-thread
 ```
-
-You can also build this project and run start classes such as 
-ReactiveApplication in whatever Java IDE you like.
